Fix unnecessary scrollbars on notifications popup
While loading or when there were 0 notifications, the popup displayed
with a scrollbar gutter, in a displeasingly different color.
When there weren't enough notifications to require a scrollbar,
the scrollbar was shown anyway.

These issues were caused by these rules, which don't seem necessary
any more. They were added for T130153 and T159888 (and a mysterious
scrollbar rendering bug), and I can't reproduce any of these bugs.

Bug: T351481

--- a/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
+++ b/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
@@ -34,12 +34,6 @@
 			}
 
 			> .oo-ui-popupWidget-body {
-				// Work around scrollbar rendering bug in Chrome
-				overflow-y: visible;
-				// ...but make sure we don't actually overflow in the Y direction,
-				// to avoid breaking ClippableElement
-				overflow-x: auto;
-
 				> .mw-echo-ui-notificationsListWidget > .mw-echo-ui-notificationItemWidget {
 					// The popup body itself has a border. We need to override the notification
 					// item widget styles so that the edge borders of the items are not duplicated
